@@ -27,7 +27,7 @@ jobs:
     
     steps:
     - name: checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       
     - name: Darwin
       run: |
