@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout_main
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: prepare obs
       run: |
