@@ -1,27 +1,4 @@
-/*
- * $Log: pathexec_env.c,v $
- * Revision 1.7  2024-05-09 23:46:54+05:30  mbhangui
- * fix discarded-qualifier compiler warnings
- *
- * Revision 1.6  2021-07-14 09:38:47+05:30  Cprogrammer
- * added pathexec_clear() to clear new env variables added
- *
- * Revision 1.5  2020-04-04 09:46:18+05:30  Cprogrammer
- * added code documentation
- *
- * Revision 1.4  2011-05-07 15:58:21+05:30  Cprogrammer
- * removed unused variable
- *
- * Revision 1.3  2010-06-08 21:59:53+05:30  Cprogrammer
- * return allocated environment variable
- *
- * Revision 1.2  2004-10-22 20:27:54+05:30  Cprogrammer
- * added RCS id
- *
- * Revision 1.1  2004-07-17 20:57:35+05:30  Cprogrammer
- * Initial revision
- *
- */
+/* $Id: pathexec_env.c,v 1.8 2024-11-13 09:02:54+05:30 Cprogrammer Exp mbhangui $ */
 #include "stralloc.h"
 #include "alloc.h"
 #include "str.h"
@@ -29,8 +6,7 @@
 #include "env.h"
 #include "pathexec.h"
 
-static stralloc plus;
-static stralloc tmp;
+static stralloc plus, tmp;
 
 int
 pathexec_env(const char *s, const char *t)
@@ -62,11 +38,7 @@ char **
 pathexec(char **argv)
 {
 	char          **e;
-	unsigned int    elen;
-	unsigned int    i;
-	unsigned int    j;
-	unsigned int    split;
-	unsigned int    t;
+	unsigned int    elen, i, j, split, t;
 
 	if (!stralloc_cats(&plus, ""))
 		return ((char **) 0);
@@ -109,10 +81,59 @@ pathexec(char **argv)
 	return (e);
 }
 
+int
+pathexec_env_plus(const char *var, int len)
+{
+	unsigned int    i, j;
+
+	if (!stralloc_cats(&plus, ""))
+		return -6;
+	j = 0;
+	for (i = 0; i < plus.len; ++i) {
+		if (!plus.s[i]) {
+			if (byte_equal(plus.s + j, len, var)) {
+				if (!env_put2(var, plus.s + j + 5))
+					return -6;
+			}
+			j = i + 1;
+		}
+	}
+	plus.len--;
+	return 0;
+}
+
 void
 getversion_pathexec_env_c()
 {
-	const char     *x = "$Id: pathexec_env.c,v 1.7 2024-05-09 23:46:54+05:30 mbhangui Exp mbhangui $";
+	const char     *x = "$Id: pathexec_env.c,v 1.8 2024-11-13 09:02:54+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
+
+/*
+ * $Log: pathexec_env.c,v $
+ * Revision 1.8  2024-11-13 09:02:54+05:30  Cprogrammer
+ * added pathexec_env_plus() to add env variables from plus variable
+ *
+ * Revision 1.7  2024-05-09 23:46:54+05:30  mbhangui
+ * fix discarded-qualifier compiler warnings
+ *
+ * Revision 1.6  2021-07-14 09:38:47+05:30  Cprogrammer
+ * added pathexec_clear() to clear new env variables added
+ *
+ * Revision 1.5  2020-04-04 09:46:18+05:30  Cprogrammer
+ * added code documentation
+ *
+ * Revision 1.4  2011-05-07 15:58:21+05:30  Cprogrammer
+ * removed unused variable
+ *
+ * Revision 1.3  2010-06-08 21:59:53+05:30  Cprogrammer
+ * return allocated environment variable
+ *
+ * Revision 1.2  2004-10-22 20:27:54+05:30  Cprogrammer
+ * added RCS id
+ *
+ * Revision 1.1  2004-07-17 20:57:35+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
